--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ function initialize() {
       var infowindow = new google.maps.InfoWindow({
         map: map,
         position: pos,
-        content: 'Location found using HTML5. <a href="tel:5551234567">Call (555)123-4567</a>'
+        content: 'Location found using HTML5. <a href="tel:3333333337">Call 333333</a>'
       });
 
       map.setCenter(pos);
