--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ function initialize() {
       var infowindow = new google.maps.InfoWindow({
         map: map,
         position: pos,
-        content: 'Location found using HTML5. <a href="sms:+393280311197">Call 333333</a>'
+        content: 'Location found using HTML5. <a href="sms://+3490322111?body=Interested%20in%20Product%20AA2">Call 333333</a>'
       });
 
       map.setCenter(pos);
